fix(gux-advanced-dropdown): text overflow issues are fixed

--- a/src/components/stable/gux-advanced-dropdown/gux-advanced-dropdown.less
+++ b/src/components/stable/gux-advanced-dropdown/gux-advanced-dropdown.less
@@ -42,7 +42,10 @@ div.gux-dropdown {
       right: 0;
       bottom: 0;
       left: 0;
-      padding: 5px 12px 4px 12px;
+      padding: 5px 24px 4px 12px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
       cursor: pointer;
       border: 1px solid @border-color;
       border-radius: 2px;
